--- a/website/contacts.css
+++ b/website/contacts.css
@@ -1,7 +1,12 @@
+body {
+  margin: auto;
+  text-align: center;
+  padding-top: 40px;
+  padding-bottom: 40px;
+  background-color: #eee !important;
 
-button:focus {
-    outline: 0;
 }
+
 .form-inline {
   padding: 10px;
   display:block !important;
